[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/08-Box/Box Pieces 1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/02-King Pig/Box Pieces 4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/08-Box/Box Pieces 2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/08-Box/Box Pieces 3.png" type="Texture" id=4]
[ext_resource path="res://BoxPiece.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 5 )

[node name="BoxPiece" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 5 )

[node name="Sprite1" type="Sprite" parent="."]
position = Vector2( -16, 0 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -5, 0 )
texture = ExtResource( 3 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 6, 0 )
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 18, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 2 )
shape = SubResource( 1 )
